--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ body {
   stroke: #ccc;
   stroke-width: 1.5px;
 }
-.container {
-  text-align:center;
+.chart div {
+  font: 10px sans-serif;
+  background-color: steelblue;
+  text-align: right;
+  padding: 3px;
+  margin: 1px;
+  color: white;
 }
